--- a/site_departement_info/css/style.css
+++ b/site_departement_info/css/style.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Nunito', sans-serif;
 
     width: 100%;
-    background-color: #00246b;
+    background-color: #2f8dc4;
     /* Bleu foncé */
     color: white;
     /* Ajout de padding pour éviter le décalage */
@@ -47,14 +47,14 @@ body {
     color: white;
     font-size: 18px;
     transition: all 0.3s ease;
-    border-radius: 5px;
+    border-radius: 2px;
 }
 
 /* Style au survol */
 .nav-item:hover {
     background-color: #fff;
     /* Fond blanc au survol */
-    color: #003399;
+    color: #2f8dc4;
     /* Texte bleu foncé au survol */
 }
 
