--- a/login.css
+++ b/login.css
@@ -4,13 +4,9 @@ body{
     background-position: center;
 }
 
-@font-face {
-    font-family: 'Roboto';
-    src: url("Roboto-Thin.ttf")
-}
 
 #container{
-    font-family : "Roboto",sans-serif;
+    font-family : "Verdana",sans-serif;
     width:420px;
     background: transparent;
     border: 2px solid cyan;
@@ -39,7 +35,7 @@ form {
 /* Full-width inputs */
 input[type=text], input[type=password] {
     width: 100%;
-    height: 10%;
+    height: 7%;
     background: transparent;
     border : none;
     outline: none;
@@ -55,6 +51,7 @@ input[type=submit] {
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
+    margin-top: 50px;
     border: none;
     cursor: pointer;
     width: 100%;
