--- a/IntraNet/css/Actualite.css
+++ b/IntraNet/css/Actualite.css
@@ -7,7 +7,7 @@
 
 body{
     font-family: Verdana, sans-serif;
-    background-color: dodgerblue;
+    background-color: #1f98cf;
 }
 
 a{text-decoration: none; }
