--- a/site_departement_info/css/style.css
+++ b/site_departement_info/css/style.css
@@ -23,7 +23,8 @@ body {
     color: white;
     /* Ajout de padding pour éviter le décalage */
     box-sizing: border-box;
-    padding: 20px;
+    padding-top: 10px;
+    padding-bottom: 5px;
     position: sticky;
     top: 0px;
     /* Inclure le padding dans la largeur totale */
@@ -41,14 +42,19 @@ body {
 
 }
 
-@media (max-width: 500px)
+@media (max-width: 660px)
 {
     .nav-links {
         flex-direction: column;
         align-items: center; /* Alignement vertical au centre */
-        justify-content: flex-end; /* Espace équitable entre les éléments */
+        row-gap: 20px;
+        padding-bottom: 10px;
         /* Alignement à droite */
     }
+    .navbar {
+        position: relative;
+    }
+
 }
 
 /* Style des liens de navigation */
@@ -78,14 +84,14 @@ body {
 }
 
 #intra{
+    border-radius: 20px;
     width: 30px;
     height: 30px;
     cursor: pointer;
 }
 
-#intra:over{
-    width: 40px;
-    height: 40px;
+#intra:hover{
+    
 }
 
 .top{
