--- a/IntraNet/css/style.css
+++ b/IntraNet/css/style.css
@@ -9,8 +9,12 @@ body{
     font-family: Verdana, sans-serif;
     background-image: url("../img/DepInfo.jpg");
     background-size: 100%;
-
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
+
 
 a{text-decoration: none; }
 
@@ -19,7 +23,7 @@ a{text-decoration: none; }
     flex-direction: column;
     align-items: center;
     padding: 16px;
-    background-color: white;
+    background-color: #69c9f0;
 }
 
 .navbar ul{
@@ -43,6 +47,8 @@ a{text-decoration: none; }
     margin-right: 18%;
 }
 
+
+
 .navbar .e a img{
     height: 100%;
     width: 100%;
@@ -57,5 +63,81 @@ a{text-decoration: none; }
 
 .navbar ul li a:focus{
     color:  #1d1d1d;
+}
+
+
+
+h2{
+    text-align: center;
+    margin-bottom: 1%;
+    font-size: 17px;
+}
+
+h3{
+    text-align: center;
+    margin-bottom: 2%;
+}
+
+.encadrert{
+    background-color: rgba(255, 255, 255, 0.75);
+    text-align: center;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 17px;
+    border-radius: 7px;
+    max-width: 100%;
+}
+
+
+.encadrer{
+    background-color: rgba(255, 255, 255, 0.75);
+
+    margin: 4%;
+
+    padding: 17px;
+    border-radius: 7px;
+    max-width: 400px;
+
+
+}
+
+.e_encadre{
+    display: flex;
+    flex-direction: row;
+
+}
+
+footer{
+    background-color: white;
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+footer .logo {
+    height: 10%;
+    width: 10%;
+    margin-right: 10%;
+    margin-left: 2%;
+}
+
+footer .insta {
+    height: 2%;
+    width: 2%;
+}
+
+footer .logo img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+footer .insta img{
+
+    height: 100%;
+    width: 100%;
+
 }
 
