--- a/IntraNet/css/Actualite.css
+++ b/IntraNet/css/Actualite.css
@@ -7,7 +7,7 @@
 
 body{
     font-family: Verdana, sans-serif;
-    background-color: #1f98cf;
+    background-color: lightblue;
 }
 
 a{text-decoration: none; }
@@ -17,7 +17,7 @@ a{text-decoration: none; }
     flex-direction: column;
     align-items: center;
     padding: 16px;
-    background-color: white;
+    background-color: #69c9f0;
 }
 
 .navbar ul{
