--- a/IntraNet/css/BoutiqueBDE.css
+++ b/IntraNet/css/BoutiqueBDE.css
@@ -8,9 +8,7 @@
 
 body{
     font-family: Verdana, sans-serif;
-    background-color: #1d1d1d;
-
-
+    background-color: white;
 }
 
 
@@ -21,7 +19,7 @@ a{text-decoration: none; }
     flex-direction: column;
     align-items: center;
     padding: 16px;
-    background-color: white;
+    background-color: #69c9f0;
 }
 
 .navbar ul{
@@ -60,4 +58,40 @@ a{text-decoration: none; }
 
 .navbar ul li a:focus{
     color:  #1d1d1d;
+}
+
+.produit{
+    font-family : "Verdana",sans-serif;
+    width:100%;
+    text-align: center;
+    font-size: 25px;
+    background: darkslateblue;
+    color : #000000;
+    padding:30px 40px;
+    margin:0 auto;
+}
+
+.vrai_produit{
+    display: flex;
+    flex-direction: row;
+}
+
+.vrai_vrai_produit{
+    display: flex;
+    flex-direction: column;
+    font-family : "Verdana",sans-serif;
+    width:300px;
+    text-align: center;
+    font-size: 10px;
+    background: darkslateblue;
+    color : #000000;
+    padding:30px 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin:0 auto;
+}
+
+.vrai_vrai_produit img{
+    width: 80%;
+    height: 80%;
 }
