--- a/IntraNet/css/ReservationSalle.css
+++ b/IntraNet/css/ReservationSalle.css
@@ -7,7 +7,7 @@
 
 body{
     font-family: Verdana, sans-serif;
-    background-color: #28b1e2;
+    background-color: #ffffff;
 
 
 }
@@ -19,7 +19,7 @@ a{text-decoration: none; }
     flex-direction: column;
     align-items: center;
     padding: 16px;
-    background-color: white;
+    background-color: #69c9f0;
 }
 
 .navbar ul{
