--- a/site_departement_info/css/style.css
+++ b/site_departement_info/css/style.css
@@ -178,16 +178,19 @@ body {
     width: auto;
     padding:20px;
     background-color: #e8e8e8;
-    width: auto;
 }
 .part2 p{
     margin-top:40px;
 }
 .part3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     width: auto;
-    padding:20px;
-    background-color: #f2f2f2;
-    width: auto;
+    margin:20px;
+    flex-direction: row;
+    gap:50px;
 }
 .texte {
     font-size: 13px;
@@ -202,26 +205,199 @@ body {
     padding: 10px;
     background-color: #fff;
 }
+
 .tit {
     margin:20px;
-    font-size: 25px;
+    margin-left: 0px;
+    margin-bottom: 4px;
+    font-size: 19px;
+    font-weight: normal;
+}
+.tit2 {
+    font-size: 19px;
+    font-weight: normal;
 }
 
-.footer{
 
+
+.phrase {
+    font-size: 25px;
+    font-weight: normal;
+}
+.carte {
+    display: none;
+    transition: 0.5s;
+}
+.imageCarte {
+    transition: 0.1s;
+    border: solid 2px #000;
+    background-color: #ffffff;
+    border-radius: 100px;
+    background-image: url("../images/logo/location.png");
+    width: 200px;
+    height: 200px;
+    background-size: cover; /* Couvre entièrement la div sans se répéter */
+  background-position: center; /* Centre l'image dans la div */
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+.imageCarte:hover {
+    border: solid 2px #ffffff;
+    background-color: #1f98cf;
+    background-image: url("../images/logo/locationblanc.png");
+}
+.footer{
+    
     background-color: #1f98cf;
     color: white;
     padding: 20px;
+}
+.flexFooter{
     display: flex;
-    flex-direction: row;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+.flexFooter a{
+    display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
 }
 
-.lien{
-    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-right: 40px;
+.discord {
+    background-image: url("../images/logo/discord.png");
+    width: 40px;
+    height: 40px;
+    background-size: cover; /* Couvre entièrement la div sans se répéter */
+  background-repeat: no-repeat;
+  cursor: pointer;
+  margin: 0 10px;
+   
+}
+.insta {
+    background-image: url("../images/logo/instagram.png");
+    width: 40px;
+    height: 40px;
+    background-size: cover; /* Couvre entièrement la div sans se répéter */
+  background-repeat: no-repeat;
+  cursor: pointer;
+  margin: 0 10px;
+}
+.insta:hover {
+    background-image: url("../images/logo/instagramjaune.png");
+}
+.discord:hover {
+    background-image: url("../images/logo/discordjaune.png");
 }
 
+.left {
+    margin-right: auto;
+}
+.logo1 {
+    margin-bottom:10px;
+    margin-top: -40px;
+    background-color: #fff;
+    border-radius: 100px;
+    background-image: url("../images/logo/formation.png");
+    width: 80px;
+    height: 80px;
+    background-size: cover; /* Couvre entièrement la div sans se répéter */
+    background-repeat: no-repeat;
+    max-width: 100%;
+}
+.logo2 {
+    margin-bottom:10px;
+    margin-top: -40px;
+    background-color: #fff;
+    border-radius: 100px;
+    background-image: url("../images/logo/parcours.png");
+    width: 80px;
+    height: 80px;
+    background-size: cover; /* Couvre entièrement la div sans se répéter */
+    background-repeat: no-repeat;
+    max-width: 100%;
+}
+.logo3 {
+    margin-bottom:10px;
+    margin-top: -40px;
+    background-color: #fff;
+    border-radius: 100px;
+    background-image: url("../images/logo/information.png");
+    width: 80px;
+    height: 80px;
+    background-size: cover; /* Couvre entièrement la div sans se répéter */
+    background-repeat: no-repeat;
+    max-width: 100%;
+}
+.content {
+    width: 340px;
+    border: solid 5px #fff;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #aaaaaa;
+    color: #fff;
+    height: 100px;
+}
+.content p {
+    padding: 5px;
+    margin: 5px;
+    border-top: solid 2px #fff;
+    display: none;
+}
+.content:hover p {
+    display: flex;
+}
+.content:hover {
+    height: 100%;
+    background-color: #1f98cf;
+}
+.flexaff {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: row;
+    text-align: center;
+    gap: 60px;
+    margin-top:60px;
+    margin-bottom:100px;
+}
+.parcours {
+    margin-left: 400px;
+    margin-right: 400px;
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 50px;
+}
+
+.content2{
+    margin: 100px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+    padding: 100px;
+    background-color: #fff;
+    opacity: 0.8;
+}
+.content2 p{
+    opacity: 1;
+}
+.content2 h3{
+    opacity: 1;
+}
+.bg{
+    background-image: url("../images/bg.jpg");
+    background-size: cover; /* Couvre entièrement la div sans se répéter */
+    background-repeat: no-repeat;
+    width: 100%;
+    background-attachment: fixed;
+}
+.bg2{
+    background-image: url("../images/bg2.jpg");
+    background-size: cover; /* Couvre entièrement la div sans se répéter */
+    background-repeat: no-repeat;
+    width: 100%;
+    background-attachment: fixed;
+}
