--- a/site_departement_info/css/login.css
+++ b/site_departement_info/css/login.css
@@ -74,7 +74,7 @@ form {
 }
 #container h1{
     width: 38%;
-    margin: 0 auto;
+    margin-left: 25%;
     padding-bottom: 10px;
 }
 
@@ -118,5 +118,26 @@ input[type=submit]:hover {
     margin-top:10px;
     margin-bottom: 10px;
     background-color: #af5353;
+    display: none;
+}
+#mdp {
+    margin-top:10px;
+    margin-bottom: 10px;
+    background-color: #aaaf53;
+    display: none;
+}
+#deco:hover {
+    color: #af5353;
+    background-color: #fff;
+}
+#mdp:hover {
+    color:#aaaf53;
+    background-color: #fff;
+}
+
+#cache {
+    display: block;
+}
+#cache2 {
     display: none;
 }
