ajout d'un admin
ajout d'un admin qui peut reset les mots de passes
nom : admin
mdp : admin

--- a/site_departement_info/css/login.css
+++ b/site_departement_info/css/login.css
@@ -120,6 +120,12 @@ input[type=submit]:hover {
     background-color: #af5353;
     display: none;
 }
+#reset {
+    margin-top:10px;
+    margin-bottom: 10px;
+    background-color: #af5353;
+    display: none;
+}
 #mdp {
     margin-top:10px;
     margin-bottom: 10px;
@@ -127,6 +133,10 @@ input[type=submit]:hover {
     display: none;
 }
 #deco:hover {
+    color: #af5353;
+    background-color: #fff;
+}
+#reset:hover {
     color: #af5353;
     background-color: #fff;
 }
