--- a/IntraNet/css/BoutiqueBDE.css
+++ b/IntraNet/css/BoutiqueBDE.css
@@ -4,14 +4,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-
-
 body{
     font-family: Verdana, sans-serif;
-    background-color: #1d1d1d;
-
-
+    background-color: #1f98cf;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
+
 
 
 a{text-decoration: none; }
@@ -21,7 +22,7 @@ a{text-decoration: none; }
     flex-direction: column;
     align-items: center;
     padding: 16px;
-    background-color: white;
+    background-color: #69c9f0;
 }
 
 .navbar ul{
@@ -31,13 +32,10 @@ a{text-decoration: none; }
 }
 
 
-
-
-
 .navbar .e{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
 
 }
@@ -45,13 +43,28 @@ a{text-decoration: none; }
 .navbar .e a{
     height: 15%;
     width: 15%;
-    margin-right: 18%;
+    margin-right: 16%;
 }
+
+
 
 .navbar .e a img{
     height: 100%;
     width: 100%;
 }
+
+
+
+.navbar ul li a{
+    padding: 40px;
+    margin: 0 10px;
+}
+
+.navbar ul li a:focus{
+    color:  #1d1d1d;
+}
+
+
 
 .navbar ul li a{
     padding: 40px;
