--- a/IntraNet/css/ReservationSalle.css
+++ b/IntraNet/css/ReservationSalle.css
@@ -8,9 +8,13 @@
 body{
     font-family: Verdana, sans-serif;
     background-color: #28b1e2;
-
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 
 }
+
 
 a{text-decoration: none; }
 
@@ -19,7 +23,7 @@ a{text-decoration: none; }
     flex-direction: column;
     align-items: center;
     padding: 16px;
-    background-color: white;
+    background-color: #69c9f0;
 }
 
 .navbar ul{
@@ -32,7 +36,7 @@ a{text-decoration: none; }
 .navbar .e{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
 
 }
@@ -40,8 +44,10 @@ a{text-decoration: none; }
 .navbar .e a{
     height: 15%;
     width: 15%;
-    margin-right: 18%;
+    margin-right: 16%;
 }
+
+
 
 .navbar .e a img{
     height: 100%;
@@ -58,4 +64,16 @@ a{text-decoration: none; }
 .navbar ul li a:focus{
     color:  #1d1d1d;
 }
+
+
+.navbar ul li a{
+    padding: 40px;
+    margin: 0 10px;
+}
+
+.navbar ul li a:focus{
+    color:  #1d1d1d;
+}
+
+
 
