--- a/site_departement_info/css/Actualite.css
+++ b/site_departement_info/css/Actualite.css
@@ -7,15 +7,19 @@
 
 body{
     font-family: Verdana, sans-serif;
+
     background-image: url("../img/DepInfo.jpg");
     background-size: 100% 100%;
+
     background-repeat: no-repeat;
     background-attachment: fixed;
     margin: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+
+
 }
+
 
 
 a{text-decoration: none; }
@@ -67,30 +71,19 @@ a{text-decoration: none; }
     color:  #1d1d1d;
 }
 
+.navbar ul li a{
+    padding: 40px;
+    margin: 0 10px;
+}
 
-
-h2{
-    text-align: center;
-    margin-bottom: 1%;
-    font-size: 17px;
+.navbar ul li a:focus{
+    color:  #1d1d1d;
 }
 
 h3{
     text-align: center;
     margin-bottom: 5%;
 }
-
-.encadrert{
-    background-color: rgba(255, 255, 255, 0.75);
-    text-align: center;
-    margin-top: 5%;
-    margin-left: 10%;
-    margin-right: 10%;
-    padding: 17px;
-    border-radius: 7px;
-    max-width: 100%;
-}
-
 
 .encadrer{
     background-color: rgba(255, 255, 255, 0.75);
@@ -100,7 +93,7 @@ h3{
     padding: 19px;
     border-radius: 7px;
     width: 400px;
-
+    text-align: center;
 
 }
 
@@ -144,4 +137,3 @@ footer .insta img{
     width: 100%;
 
 }
-
