--- a/site_departement_info/css/login.css
+++ b/site_departement_info/css/login.css
@@ -1,8 +1,5 @@
 body{
-    background :url("https://bc2e.studyrama.com/uploads/bc2e/4785/photo_2311.webp") no-repeat;
-    background-size: cover ;
-    background-position: center;
-    font-family: 'Verdana', sans-serif;
+    
 }
 
 *{
@@ -10,62 +7,16 @@ body{
     padding: 0;
 }
 
-.navbar {
-    width: 100%;
-    background-color: #1f98cf;
-    /* Bleu foncé */
-    color: white;
-    /* Ajout de padding pour éviter le décalage */
-    box-sizing: border-box;
-    padding: 20px;
-    position: sticky;
-    top: 0px;
-    /* Inclure le padding dans la largeur totale */
+#prbg {
+    background :url("https://bc2e.studyrama.com/uploads/bc2e/4785/photo_2311.webp") no-repeat;
+    background-size: cover ;
+    background-position: center;
+    font-family: 'Verdana', sans-serif;
+    padding-top:100px;
+    padding-bottom: 100px;
 }
 
-.nav-links {
-    list-style: none;
-    display: flex;
-    flex: auto;
-    flex-direction: row;
-    align-items: start; /* Alignement vertical au centre */
-    justify-content: space-around;
-    margin-top: 0px;
 
-
-}
-
-@media (max-width: 500px)
-{
-    .nav-links {
-        flex-direction: column;
-        align-items: center; /* Alignement vertical au centre */
-        justify-content: flex-end; /* Espace équitable entre les éléments */
-        /* Alignement à droite */
-    }
-}
-
-/* Style des liens de navigation */
-.nav-item {
-    text-decoration: none;
-    color: white;
-    font-size: 18px;
-    border-radius: 2px;
-    padding: 5px;
-}
-
-/* Style au survol */
-.nav-item:hover {
-    background-color: #fff;
-    /* Fond blanc au survol */
-    color: #38B0E3;
-    /* Texte bleu foncé au survol */
-}
-
-.logonormal {
-    justify-content: center;
-    width : 30%
-}
 
 #pageactuelle{
     border-bottom: solid #ffffff 3px;
@@ -104,14 +55,15 @@ body{
     font-family : "Verdana",sans-serif;
     width:420px;
     background: transparent;
-    border: 2px solid cyan;
+    border: 2px solid #fff;
     color : #fff;
     border-radius: 10px;
     backdrop-filter: blur(10px);
     box-shadow: 0 0 10px #ffffff;
     padding:30px 40px;
     margin:0 auto;
-    margin-top:5%;
+    margin-top:100px;
+    margin-bottom: 100px;
 }
 /* Bordered form */
 form {
@@ -123,7 +75,7 @@ form {
 }
 #container h1{
     width: 38%;
-    margin: 0 auto;
+    margin-left: 25%;
     padding-bottom: 10px;
 }
 
@@ -147,12 +99,70 @@ input[type=submit] {
     padding: 14px 20px;
     margin: 8px 0;
     margin-top: 50px;
+    margin-bottom: 0px;
     border: none;
     cursor: pointer;
     width: 100%;
+    margin-top:10px;
 }
 input[type=submit]:hover {
     background-color: white;
     color: #53af57;
-    border: 1px solid #53af57;
+}
+.message {
+    margin-top: 40px;
+    text-align: center;
+    color:#53af57;
+    background-color: #fff;
+}
+#deco {
+    margin-top:10px;
+    margin-bottom: 10px;
+    background-color: #af5353;
+    display: none;
+}
+#reset {
+    margin-top:10px;
+    margin-bottom: 10px;
+    background-color: #af5353;
+    display: none;
+}
+#mdp {
+    margin-top:10px;
+    margin-bottom: 10px;
+    background-color: #aaaf53;
+    display: none;
+}
+#deco:hover {
+    color: #af5353;
+    background-color: #fff;
+}
+#reset:hover {
+    color: #af5353;
+    background-color: #fff;
+}
+#mdp:hover {
+    color:#aaaf53;
+    background-color: #fff;
+}
+
+#cache {
+    display: block;
+}
+#cache2 {
+    display: none;
+}
+#gointra {
+    margin-top:10px;
+    margin-bottom: 10px;
+    color: #28b1e2;
+    background-color: #ffffff;
+    border: solid 2px #28b1e2;
+    border-radius: 50px;
+    display: none;
+}
+#gointra:hover {
+    color: #fff;
+    background-color: #28b1e2;
+    border: solid 2px #fff;
 }
