--- a/IntraNet/css/Actualite.css
+++ b/IntraNet/css/Actualite.css
@@ -7,8 +7,20 @@
 
 body{
     font-family: Verdana, sans-serif;
-    background-color: lightblue;
+
+    background-image: url("../img/DepInfo.jpg");
+    background-size: 100% 100%;
+
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+
+
 }
+
+
 
 a{text-decoration: none; }
 
@@ -30,7 +42,7 @@ a{text-decoration: none; }
 .navbar .e{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
 
 }
@@ -38,12 +50,25 @@ a{text-decoration: none; }
 .navbar .e a{
     height: 15%;
     width: 15%;
-    margin-right: 18%;
+    margin-right: 16%;
 }
+
+
 
 .navbar .e a img{
     height: 100%;
     width: 100%;
+}
+
+
+
+.navbar ul li a{
+    padding: 40px;
+    margin: 0 10px;
+}
+
+.navbar ul li a:focus{
+    color:  #1d1d1d;
 }
 
 .navbar ul li a{
@@ -53,4 +78,62 @@ a{text-decoration: none; }
 
 .navbar ul li a:focus{
     color:  #1d1d1d;
+}
+
+h3{
+    text-align: center;
+    margin-bottom: 5%;
+}
+
+.encadrer{
+    background-color: rgba(255, 255, 255, 0.75);
+
+    margin: 4%;
+
+    padding: 19px;
+    border-radius: 7px;
+    width: 400px;
+    text-align: center;
+
+}
+
+.e_encadre{
+    display: flex;
+    flex-direction: row;
+
+}
+
+footer{
+    background-color: white;
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+footer .logo {
+    height: 10%;
+    width: 10%;
+    margin-right: 10%;
+    margin-left: 2%;
+}
+
+footer .insta {
+    height: 2%;
+    width: 2%;
+}
+
+footer .logo img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+footer .insta img{
+
+    height: 100%;
+    width: 100%;
+
 }
