--- a/IntraNet/css/style.css
+++ b/IntraNet/css/style.css
@@ -8,7 +8,9 @@
 body{
     font-family: Verdana, sans-serif;
     background-image: url("../img/DepInfo.jpg");
-    background-size: 100%;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -36,7 +38,7 @@ a{text-decoration: none; }
 .navbar .e{
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
 
 }
@@ -44,7 +46,7 @@ a{text-decoration: none; }
 .navbar .e a{
     height: 15%;
     width: 15%;
-    margin-right: 18%;
+    margin-right: 16%;
 }
 
 
@@ -75,7 +77,7 @@ h2{
 
 h3{
     text-align: center;
-    margin-bottom: 2%;
+    margin-bottom: 5%;
 }
 
 .encadrert{
@@ -95,9 +97,9 @@ h3{
 
     margin: 4%;
 
-    padding: 17px;
+    padding: 19px;
     border-radius: 7px;
-    max-width: 400px;
+    width: 400px;
 
 
 }
@@ -115,6 +117,8 @@ footer{
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
 footer .logo {
@@ -140,3 +144,4 @@ footer .insta img{
     width: 100%;
 
 }
+
