--- a/site_departement_info/css/style.css
+++ b/site_departement_info/css/style.css
@@ -422,3 +422,11 @@ body {
     background-color: #fff;
 
 }
+.content5{
+    margin: 300px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    padding: 50px;
+    background-color: #fff;
+
+}
