--- a/IntraNet/css/style.css
+++ b/IntraNet/css/style.css
@@ -46,7 +46,7 @@ a{text-decoration: none; }
 .navbar .e a{
     height: 15%;
     width: 15%;
-    margin-right: 16%;
+    margin-right: 50px;
 }
 
 
