--- a/IntraNet/css/BoutiqueBDE.css
+++ b/IntraNet/css/BoutiqueBDE.css
@@ -61,12 +61,12 @@ a{text-decoration: none; }
 }
 
 .produit{
+    color: #fff;
     font-family : "Verdana",sans-serif;
     width:100%;
     text-align: center;
     font-size: 25px;
     background: darkslateblue;
-    color : #000000;
     padding:30px 40px;
     margin:0 auto;
 }
@@ -110,9 +110,11 @@ a{text-decoration: none; }
     border-color: #010618;
     border-radius: 10px;
     backdrop-filter: blur(10px);
-    width: 20%;
+    width: 230px;
     border: 2px solid #132585;
     text-align: center;
+    padding: 20px;
+    background-color: #fff;
 }
 
 .partie2{
@@ -121,9 +123,11 @@ a{text-decoration: none; }
     border-color: #010618;
     border-radius: 10px;
     backdrop-filter: blur(10px);
-    width: 25%;
+    width: 370px;
     border: 2px solid #132585;
     text-align: center;
+    padding: 20px;
+    background-color: #fff;
 }
 
 .overlay {
